ProjectionTests/Tests/ScriptErrorTests/ActiveScriptError_DelegateFailure_MarshalOutParam.baseline
ActiveScriptError_DelegateFailure_MarshalOutParam.js(1, 1) JavaScript runtime error: No such interface supported

Restricted Error String: (null)
Null Restricted Error Reference
Capability SID: (null)
EXCEPINFO scode: 0x80004002
Error Type: WinRT error
Stack info:
ActiveScriptError_DelegateFailure_MarshalOutParam.js(14, 5) JavaScript runtime error: No such interface supported

All out parameters released
Restricted Error String: All out parameters released
Null Restricted Error Reference
Capability SID: (null)
EXCEPINFO scode: 0x80004002
Error Type: WinRT error
Stack info:
frame 0: Anonymous function(), line: 13, characterPosition: 4
frame 1: Global code, line: 2, characterPosition: 1
